--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "files": ["./dist", "./index.d.ts"],
   "scripts": {
     "start": "cypress open",
+    "test": "cypress run",
     "build": "tsc"
   },
   "author": "",
