--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,12 @@ jobs:
         with:
           node-version: 14.x
 
+      - name: Setup chrome in CI
+        uses: browser-actions/setup-chrome@latest
+
       # forced-colors mode is only supported on chromium > 98 for now
-      - name: Setup chrome dev
-      - uses: browser-actions/setup-chrome@latest
-      - run: chrome --version
+      - name: Install Chrome dev
+        run: chrome --version
         with:
           chrome-version: dev
 
