--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
 
       - run: npm install
       - run: npm run build
-      - run: npm run test
+      - run: npm run test:chrome
       - name: Archive test videos
         uses: actions/upload-artifact@v2
         with:
