--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "files": ["./dist", "./index.d.ts"],
   "scripts": {
     "start": "cypress open",
-    "test": "cypress run --browser chrome:dev",
+    "test:chrome": "cypress run --browser chrome",
+    "test:edge": "cypress run --browser edge",
     "build": "tsc"
   },
   "author": "",
