--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,5 +43,5 @@ jobs:
       - name: Archive test videos
         uses: actions/upload-artifact@v2
         with:
-          name: code-coverage-report
-          path: output/test/code-coverage.html
+          name: chrome-test
+          path: cypress/videos/index.spec.ts.mp4
