--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "cypress-forced-colors",
   "version": "1.0.1",
   "description": "Cypress commands to enable and disable browser forced colors mode",
-  "main": "./dist/index.js",
-  "typings": "./index.d.ts",
+  "main": "dist/index.js",
+  "typings": "index.d.ts",
+  "types": "index.d.ts",
   "files": [
-    "./dist",
-    "./index.d.ts"
+    "dist",
+    "index.d.ts"
   ],
   "scripts": {
     "start": "cypress open",
